# Avito_new

./: .env  AVITO_PROFILE_ANALYSIS.md  AVITO_SNOWMOBILE_REQUIREMENTS.md  analyze_price_list_extraction.py  analyze_spec_book_pages.py  avito_internal_validator.py  avito_items_data_20250902_120708.json  avito_profile_data_20250902_120708.json  avito_reports_data_20250902_120708.json  avito_snegohody_fields_20250902_124141.json  ayts_data.json  check_avito_validation.py  create_raw_pricelist_schema.py  create_working_database.py  debug_pdf_extraction.py  debug_uzt_extraction.py  developer_onboarding.md  direct_extraction_test.py  expected_results_real.json  extract_models_from_saved_data.py  extract_real_ayts.py  extract_snegohody_fields.py  generate_avito_xml.py  generate_ayts_pdf.py  get_avito_data.py  get_current_brp_models.py  get_models_via_api_search.py  get_snowmobile_fields.py  get_snowmobile_specific_fields.py  model_catalog_fetcher.py  parse_avito_fields_final.py  project_methodology.md  search_all_pdfs.py  setup_database.py  setup_postgres_db.py  simple_pipeline_runner.py  snowmobile_reconciliation.db  snowmobile_reconciliation_enterprise.db  snowmobile_spec_generator.py  test_avito_api.py  (+15 more)
TEST_DUAL_PARSER_PIPELINE/: .codecov.yml  .env.example  AVITO_PIPELINE_ARCHITECTURE.md  AVITO_VALIDATION_PIPELINE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  avito_snowmobiles_20250902_134540.xml  avito_validation_system.py  avito_xml_generator.py  bert_matching_engine.py  catalog_spec_parser.py  complete_avito_pipeline.py  comprehensive_parser.py  conftest.py  data_models.py  debug_pdf_text.py  debug_phase1_price_data.py  debug_phase2_catalog_extraction.py  debug_phase2_simple.py  debug_phase3_matching.py  debug_phase4_dataflow.py  debug_phase4_simple.py  debug_phase5_endtoend.py  dual_db.db  examine_pdf.py  extract_all_price_lists.py  final_test.py  llm_specbook_data_parser.py  main.py  matching_engine.py  migrate_database_schema.py  modular_parser.py  optimized_price_list_extractor.py  pipeline_orchestrator.py  production_avito_validator.py  proper_price_extractor.py  pyproject.toml  pytest.ini  requirements.txt  (+19 more)
TEST_DUAL_PARSER_PIPELINE/.github/workflows/: nightly-tests.yml  release-tests.yml  test-pipeline.yml
TEST_DUAL_PARSER_PIPELINE/config/: __init__.py  config.py
TEST_DUAL_PARSER_PIPELINE/core/: __init__.py  database.py  exceptions.py  models.py
TEST_DUAL_PARSER_PIPELINE/docs/: ARCHITECTURE.md  AVITO_VALIDATION_METHODS.md  LLM Inheritance Prompt_Spec Sheet to Price List Variants.md  LLM Prompt Template for Joining Specifications with Price Lists.md  LLM_promt_spec_books.md  README.md  requirements.txt  unified_snowmobile_schema.sql
TEST_DUAL_PARSER_PIPELINE/mistral_training/: README.md  requirements.txt
TEST_DUAL_PARSER_PIPELINE/mistral_training/config/: training_config.json
TEST_DUAL_PARSER_PIPELINE/mistral_training/data/: test.json  validation.json
TEST_DUAL_PARSER_PIPELINE/mistral_training/production/: api_server.py  inference.py
TEST_DUAL_PARSER_PIPELINE/mistral_training/scripts/: prepare_data.py  run_training.sh  train.py
TEST_DUAL_PARSER_PIPELINE/mistral_training/tests/: test_training.py
TEST_DUAL_PARSER_PIPELINE/pipeline/: __init__.py
TEST_DUAL_PARSER_PIPELINE/pipeline/stage1_extraction/: __init__.py  base_extractor.py  json_spec_extractor.py  llm_ant_pricelist_parcer.py  llm_extractor.py  llm_integration_example.py  llm_json_parser.py  pdf_extractor.py  specbook_data_inserter.py
TEST_DUAL_PARSER_PIPELINE/pipeline/stage2_matching/: __init__.py  base_matcher.py  bert_matcher.py
TEST_DUAL_PARSER_PIPELINE/pipeline/stage3_validation/: __init__.py  base_validator.py  internal_validator.py
TEST_DUAL_PARSER_PIPELINE/pipeline/stage4_generation/: __init__.py  base_generator.py
TEST_DUAL_PARSER_PIPELINE/pipeline/stage5_upload/: __init__.py  base_uploader.py  ftp_uploader.py  processing_monitor.py
TEST_DUAL_PARSER_PIPELINE/results/: bert_enhanced_pipeline_results.json  modular_parser_results.json  ski_doo_2026_complete_catalog_data.json  ski_doo_2026_enhanced_catalog_data.json
TEST_DUAL_PARSER_PIPELINE/scripts/: quality_check.py  test_runner.py
TEST_DUAL_PARSER_PIPELINE/src/: __init__.py
TEST_DUAL_PARSER_PIPELINE/src/api/: main.py
TEST_DUAL_PARSER_PIPELINE/src/models/: __init__.py  domain.py
TEST_DUAL_PARSER_PIPELINE/src/pipeline/: __init__.py  main_pipeline.py
TEST_DUAL_PARSER_PIPELINE/src/repositories/: __init__.py  database.py
TEST_DUAL_PARSER_PIPELINE/src/services/: __init__.py  catalog_extractor.py  catalog_extractor_old.py  claude_inheritance.py  matching_service.py  price_extractor.py
TEST_DUAL_PARSER_PIPELINE/tests/: __init__.py
TEST_DUAL_PARSER_PIPELINE/tests/e2e/: __init__.py  conftest.py  test_business_scenario_workflows.py  test_complete_pipeline_workflows.py  test_simple_workflows.py  test_working_e2e.py
TEST_DUAL_PARSER_PIPELINE/tests/fixtures/: __init__.py  sample_data.py
TEST_DUAL_PARSER_PIPELINE/tests/integration/: __init__.py
TEST_DUAL_PARSER_PIPELINE/tests/utils/: __init__.py  test_helpers.py
docs/: deployment_guide.md  (+17 more)
snowmobile-reconciliation/: .coverage  .env.example  .pre-commit-config.yaml  Dockerfile  GETTING_STARTED.md  Makefile  docker-compose.yml  pyproject.toml  security-report.json
snowmobile-reconciliation/src/: __init__.py  cli.py  main.py
snowmobile-reconciliation/src/api/: endpoints.py  main.py
snowmobile-reconciliation/src/config/: settings.py
snowmobile-reconciliation/src/models/: database.py  domain.py
snowmobile-reconciliation/src/pipeline/: inheritance_pipeline.py
snowmobile-reconciliation/src/repositories/: base.py  base_model_repository.py  product_repository.py
snowmobile-reconciliation/src/services/: batch_processor.py  claude_enrichment.py  pdf_extraction_service.py
snowmobile-reconciliation/tests/fixtures/: expected_results_real.py
snowmobile-reconciliation/tests/integration/: test_ayts_end_to_end_real.py  test_full_pipeline.py
snowmobile-reconciliation/tests/quality_gates/: test_no_mock_paradise.py
snowmobile-reconciliation/tests/unit/: test_main.py
(+61 files in other folders)
